# i_project

./: README  REAME.md  calc.py  git_lookup.sh  hello.sh  i_create_sysms.sh  i_protocol.vsdx  important.txt  makefile_readme  modify_mac  push.sh  readme_for_linux
Pyinstaller/: download_py_packent.py
ai/: boston_dynamics  install_cuda.readme  net.txt  readme
arm/: arm.readme  go_to_arm64.sh  install.sh  kdump_pstore_readme  local_to_arm64.sh
i_document/: ai_readme  arm.readme  buildroot.readme  coroutine.readme  create_cpio_gz.sh  create_fs.sh  cross_compile_readme  device_speed.readme  devtree.readme  dhcp_tftp_readme  gcc_asm.readme  get_flash_ram_size.sh  get_linux_src_code.sh  git_readme  hi.txt  important.txt  install_cross_compile_tools.sh  install_linux_machine.sh  install_machine.txt  install_qemu.sh  linux_from_scratch  linux_readme  objdump_objcopy.readme  opencode.json  os_readme  qemu.readme  shell.readme  soc.readme  start_for_ubuntu  tsinghua_source.sources_list  ubuntu.readme  w3m.readme
i_linux/: readme
i_lts/: ClientMain.cpp  Common.h  Server.cpp  Server.cpp.back  ServerMain.cpp
i_test/test_c/test_cmake/t2/: CMakeLists.txt  README
i_test/test_c/test_cmake/t2/src/: CMakeLists.txt  main.cpp
i_test/test_rpc/protobuf_rpc_demo/: CMakeLists.txt  run.sh
i_test/test_rpc/protobuf_rpc_demo/src/: echo.proto  myrpc.h
i_tools/: binary_tools  calc.py  convert_time.sh  i_proc_net_netstat_tool  modify_content_on_row_column.sh  r2.txt  usb.txt
local_files/: BT_linux_opt.txt  WIFI_linux_opt.txt  game.txt  net.xlsx  python_web.txt  summary_thinking.xlsx  (+1 more)
(+370 files in other folders)
